--- a/src/pages/addBudget/addBudget.css
+++ b/src/pages/addBudget/addBudget.css
@@ -1,3 +1,10 @@
+.budgets-container{
+    height: calc(100vh - 56px);
+    display: flex;
+    align-items: center;
+    /* background-color: white; */
+}
+
 .budget{
     display: flex;
     justify-content: space-between;
@@ -9,7 +16,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
+@keyframes move {
+    
+}
+
 .budget-img-holder img{
     width: 100%;
     /* height: 100%; */
@@ -20,19 +32,36 @@
 .budget-content h1{
     color: #6c402b;
     font-weight: bold ;
-    margin-bottom: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
     font-size: 3rem;
     max-width: 497px;
     text-align: center;
+    background: linear-gradient(3deg, rgb(7 235 164) 9%, rgb(42 175 205) 26%,rgb(129, 180, 248) 54%,rgb(0 255 11) 73%,rgb(14 255 206) 3%);
+   /* background: linear-gradient(3deg, rgb(29 67 255) 9%, rgb(30 38 217) 26%,rgb(129, 180, 248) 54%,rgb(38, 0, 255) 73%,rgb(51, 122, 194) 98%);
+    */-webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
+
 .budget-content label{
-    width: 300px;
+    max-width:480px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 1rem;
+}
+
+.budget-content span{
+    color: #505ec9;
+    font-weight: 500;
+    font-family: system-ui;
+    text-transform: capitalize;
+    width: 200px;
+    font-size: 20px;
+}
+.budget-content label input{
+    width: 265px;
+    height: 35px;
 }
 
 @media screen and (max-width:767px) {
